--- a/content/post/2020-11-6-covid-app/index.Rmd
+++ b/content/post/2020-11-6-covid-app/index.Rmd
@@ -22,9 +22,9 @@ runtime: 'shiny'
 
 ##### The data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is updated daily. The app is hosted [here](https://biolight-informatics.shinyapps.io/covid-app/) on Shinyapps.io. You can also grab my code [Git<i class="fab fa-github"  style="color: #RRGGBB,"></i>hub](https://github.com/gmednick/covid-shiny-app/blob/master/app.R) and run it on your own machine if you have R and RStudio installed. 
 
-![This is what the app looks like!](covid-app-img.png)
+![Image of the reactive dashboard!](covid-app-img.png)
 
-#### In this post, I've added a county-level case map and an animation that were not included in the reactive dashboard.
+#### In this post, I've added a county-level case map and an animation that are not in the reactive dashboard.
 
 ```{r include = FALSE}
 knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
